--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/styles.scss" />
+    <link rel="stylesheet" href="./styles/styles.css" />
     <link rel="shortcut icon" href="./images/favicon.png" />
     <title>Todo List</title>
   </head>
   <body>
-    <h1>Todo List</h1>
+    <h1 class="text-4xl text-gray-800 font-semibold antialiased">
+      Todo List hi
+    </h1>
     <script src="./index.js"></script>
   </body>
 </html>
