--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     <link rel="shortcut icon" href="./images/favicon.png" />
     <title>Todo List</title>
   </head>
-  <body>
-    <h1 class="text-4xl text-gray-800 font-semibold antialiased">
+  <body class="bg-gray-900">
+    <h1 class="text-4xl text-gray-100 font-semibold antialiased">
       Todo List hi
     </h1>
     <script src="./index.js"></script>
