Added more features to  UI class

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="./images/favicon.png" />
     <title>Todo List</title>
   </head>
-  <body class="bg-gray-100">
+  <body class="bg-gray-100 antialiased">
     <nav class="h-16 bg-gray-800">
       <div
         class="container w-11/12 max-w-6xl m-auto h-full flex items-center justify-content-center"
@@ -21,18 +21,8 @@
     </nav>
     <main>
       <div
-        class="main-container w-11/12 max-w-6xl m-auto h-screen border-gray-200 border-solid border-2 border-t-0 border-b-0 flex"
-      >
-        <div
-          class="card border-gray-200 border-solid p-4 m-4 bg-gray-400 w-64 h-64"
-        >
-          <h1>Todo</h1>
-          <p>
-            Description Lorem ipsum, dolor sit amet consectetur adipisicing
-            elit. Iusto, consectetur.
-          </p>
-        </div>
-      </div>
+        class="main-container w-11/12 max-w-6xl m-auto h-screen border-gray-200 border-solid border-2 border-t-0 border-b-0 flex flex-col"
+      ></div>
     </main>
     <script src="./index.js"></script>
   </body>
