Added todo container and toggled menu hiding

--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,16 @@
         </div>
       </nav>
     </header>
+
+    <div class="sidebar">
+      <div class="container">
+        <ul class="todo-list-titles"></ul>
+      </div>
+    </div>
     <main>
-      <div class="sidebar">
-        <div class="container">
-          <ul class="todo-list-titles"></ul>
+      <div class="todo-container">
+        <div class="todo-container-screen">
+          <h1>HELLO</h1>
         </div>
       </div>
     </main>
