Added createTodoListContainer function in UI class

--- a/src/index.html
+++ b/src/index.html
@@ -29,9 +29,7 @@
     </div>
     <main>
       <div class="todo-container">
-        <div class="todo-container-screen">
-          <h1>HELLO</h1>
-        </div>
+        <div class="todo-container-screen"></div>
       </div>
     </main>
     <script src="./index.js"></script>
