--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,45 @@
     </div>
     <main>
       <div class="todo-container">
-        <div class="todo-container-screen"></div>
+        <div class="todo-container-screen">
+          <div class="add-todo-input">
+            <form id="addTodoFrom">
+              <div class="container">
+                <div class="title">
+                  <label for="title">Title: </label>
+                  <textarea
+                    name="title"
+                    id="title"
+                    placeholder="Enter the title"
+                  ></textarea>
+                </div>
+                <div class="description">
+                  <label for="description">Description: </label>
+                  <textarea
+                    name="description"
+                    id="description"
+                    placeholder="Enter the description"
+                  ></textarea>
+                </div>
+                <div class="sub-options">
+                  <div class="date">
+                    <label for="due-date">Pick a date: </label>
+                    <input type="date" name="due-date" id="due-date" />
+                  </div>
+                  <div class="urgency">
+                    <label for="urgency">Urgency: </label>
+                    <select name="urgency" id="urgency">
+                      <option value="none">None</option>
+                      <option value="important">Important</option>
+                      <option value="urgent">Urgent</option>
+                    </select>
+                  </div>
+                </div>
+              </div>
+              <button class="add-todo-button" type="submit">Add Task</button>
+            </form>
+          </div>
+        </div>
       </div>
     </main>
     <script src="./index.js"></script>
