--- a/src/index.html
+++ b/src/index.html
@@ -50,10 +50,6 @@
                   ></textarea>
                 </div>
                 <div class="sub-options">
-                  <div class="date">
-                    <label for="due-date">Pick a date: </label>
-                    <input type="date" name="due-date" id="due-date" />
-                  </div>
                   <div class="urgency">
                     <label for="urgency">Urgency: </label>
                     <select name="urgency" id="urgency">
@@ -61,6 +57,10 @@
                       <option value="important">Important</option>
                       <option value="urgent">Urgent</option>
                     </select>
+                  </div>
+                  <div class="date">
+                    <label for="date">Pick a date: </label>
+                    <input type="date" name="date" id="date" />
                   </div>
                 </div>
               </div>
