--- a/src/index.html
+++ b/src/index.html
@@ -76,6 +76,10 @@
                     <label for="date">Pick a date: </label>
                     <input type="date" name="date" id="date" />
                   </div>
+                  <div class="list">
+                    <label for="list">List: </label>
+                    <select name="list" id="list"></select>
+                  </div>
                 </div>
               </div>
               <button class="add-todo-button" type="submit">Add Task</button>
