added newList input

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,10 @@
     <div class="sidebar">
       <div class="container">
         <ul class="todo-list-titles"></ul>
+        <form id="addNewList">
+          <input type="text" id="listTitle" required />
+          <button type="submit">Add new List</button>
+        </form>
       </div>
     </div>
     <main>
