Added delete todo button

--- a/src/index.html
+++ b/src/index.html
@@ -41,8 +41,8 @@
     </header>
 
     <div class="sidebar" id="sidebar">
-      <div class="container">
-        <ul class="todo-list-titles"></ul>
+      <div class="container" id="sidebarContainer">
+        <ul class="todo-list-titles" id="todoListTitles"></ul>
         <form id="addNewList" class="add-new-list-form" autocomplete="off">
           <input
             type="text"
