More css changes

--- a/src/index.html
+++ b/src/index.html
@@ -68,10 +68,10 @@
                 ></path>
               </svg>
             </div>
-            <p>Add task</p>
+            <p class="add-task-text">Add task</p>
           </div>
           <div class="add-task-form" id="addTaskFormContainer">
-            <form id="addTaskForm">
+            <form id="addTaskForm" autocomplete="off">
               <div class="container">
                 <div class="title">
                   <label for="title">Title: </label>
