--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/styles.scss" />
     <link rel="shortcut icon" href="./images/favicon.png" />
-    <title>Task Doer</title>
+    <title>Tasky</title>
   </head>
   <body>
     <header>
@@ -57,7 +57,7 @@
     <main>
       <div class="dashboard" id="dashboard">
         <div class="project-container">
-          <div class="task-list-tasks"></div>
+          <div class="project-tasks"></div>
           <div class="add-task-button" id="addTaskFormToggler">
             <div class="plus">
               <svg width="13" height="13">
@@ -107,9 +107,9 @@
                     <label for="date">Pick a date: </label>
                     <input type="date" name="date" id="date" />
                   </div>
-                  <div class="list">
-                    <label for="list">List: </label>
-                    <select name="list" id="list"></select>
+                  <div class="project-selection">
+                    <label for="project">Project: </label>
+                    <select name="project" id="project"></select>
                   </div>
                 </div>
               </div>
