--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
             </div>
             <p class="add-task-text">Add task</p>
           </div>
-          <div class="add-task-form" id="addTaskFormContainer">
+          <div class="add-task-form hide" id="addTaskFormContainer">
             <form id="addTaskForm" autocomplete="off">
               <div class="container">
                 <div class="title">
