--- a/src/index.html
+++ b/src/index.html
@@ -110,8 +110,8 @@
                     <input type="date" name="date" id="date" />
                   </div>
                   <div class="project-selection">
-                    <label for="project">Project: </label>
-                    <select name="project" id="project"></select>
+                    <label for="projects">Project: </label>
+                    <select name="projects" id="projects"></select>
                   </div>
                 </div>
               </div>
