More styling, fixed bug, now message will show if no project exists

--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
       <div class="dashboard" id="dashboard">
         <div class="project-container">
           <div class="project-tasks" id="projectTasks"></div>
-          <div class="add-task-button" id="addTaskFormToggler">
+          <div class="add-task-button hide" id="addTaskFormToggler">
             <div class="plus">
               <svg width="13" height="13">
                 <path
