--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="ProjectTasks" />
     <link rel="stylesheet" href="./styles/styles.scss" />
     <link rel="shortcut icon" href="./images/favicon.png" />
     <title>ProjectTasks</title>
