Sample projects and tasks are created if there is nothing in local storage

--- a/src/index.html
+++ b/src/index.html
@@ -91,6 +91,7 @@
                     name="description"
                     id="description"
                     placeholder="Enter the description"
+                    required
                   />
                 </div>
                 <div class="sub-options">
