Removed hover state in small viewport

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
     </header>
     <main>
       <!-- Sidebar -->
-      <div class="sidebar" id="sidebar">
+      <div class="sidebar closed" id="sidebar">
         <div class="container" id="sidebarContainer">
           <ul class="project-titles" id="projectTitles"></ul>
           <form id="addProject" class="add-new-project-form" autocomplete="off">
@@ -46,7 +46,7 @@
         </div>
       </div>
       <!-- Dashboard -->
-      <div class="dashboard" id="dashboard">
+      <div class="dashboard closed" id="dashboard">
         <div class="project-container">
           <div class="project-tasks" id="projectTasks"></div>
           <div class="add-task-button hide" id="addTaskFormToggler">
