--- a/src/index.html
+++ b/src/index.html
@@ -114,7 +114,7 @@
         </div>
       </div>
     </main>
-    <script src="./index.js"></script>
+    <script src="./index.js" defer></script>
   </body>
 </html>
 <!DOCTYPE html>
